[tool.black]
line-length = 120
target-version = ['py38']

[tool.poetry]
name = "cryptoportfoliotracker"
version = "0.0.1"
authors = ["Trevor White <github.com/trevtravtrev>"]
description = "Simple CLI tool to track your cryptocurrency portfolio in real time."

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "4.9.3"
bs4 = "0.0.1"
MarkupSafe = "1.1.1"
numpy = "1.20.2" 
pandas = "1.2.4"
python-dateutil = "2.8.1"
pytz = "2021.1"
selenium = "3.141.0"
six = "1.15.0"
soupsieve = "2.2.1"
tabulate = "0.8.9"
urllib3 = "1.26.4"

[tool.poetry.scripts]

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
