[tool.poetry]
name = "coinsense"
version = "0.1.0"
description = ""
authors = ["Trevor White <trevor.white@wayne.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "4.9.3"
certifi = "2020.12.5"
cffi = "1.14.5"
chardet = "4.0.0"
cryptography = "3.4.7"
fake-useragent = "0.1.11"
free-proxy = "1.0.2"
httmock = "1.4.0"
http-request-randomizer = "1.3.2"
idna = "2.10"
markupsafe = "1.1.1"
numpy = "^1.24.3"
pandas = "^2.0.2"
psutil = "5.8.0"
pycparser = "2.20"
pyopenssl = "20.0.1"
pytz = "2021.1"
requests = "2.25.1"
selenium = "3.141.0"
six = "1.15.0"
soupsieve = "2.2.1"
tabulate = "0.8.9"
urllib3 = "1.26.4"
user-agent = "0.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
